--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,136 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/l"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <!-- 응답자 이름 정보-->
     <TextView
+        android:id="@+id/t1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:text="이름"/>
+        android:text="이름"
+        android:textColor="#000000" />
+
     <EditText
+        android:layout_below="@+id/t1"
         android:id="@+id/name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""/>
+        android:layout_height="wrap_content" />
 
     <!-- 응답자 성별 정보-->
     <TextView
+        android:id="@+id/t2"
+        android:layout_below="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:text=" [ 성별 ] "/>
+        android:text=" [ 성별 ] "
+        android:textColor="#000000" />
+
     <ToggleButton
+        android:layout_below="@+id/t2"
         android:id="@+id/sex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textOn="성별 설정:  남자"
+        android:backgroundTint="#A9A9F5"
         android:textOff="성별 설정:  여자"
-        android:backgroundTint="#A9A9F5"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""/>
+        android:textOn="성별 설정:  남자" />
 
     <!-- 응답자 생일 정보-->
     <TextView
+        android:id="@+id/t3"
+        android:layout_below="@+id/sex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:text=" [ 생일 ] "/>
-    <Button
-        android:id="@+id/btn_birth"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="입력"
-        android:backgroundTint="#2E64FE"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""/>
+        android:text=" [ 생일 ] "
+        android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/btn_birth"
+            android:layout_below="@+id/t3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#2E64FE"
+            android:text="열기" />
+
+        <DatePicker
+            android:layout_toRightOf="@+id/btn_birth"
+            android:id="@+id/Date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
     <!-- 응답자 학력 정보-->
     <TextView
+        android:id="@+id/t4"
+        android:layout_below="@+id/btn_birth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:text=" [ 학력 ] "/>
+        android:text=" [ 학력 ] "
+        android:textColor="#000000" />
+
     <RadioGroup
+        android:id="@+id/r1"
+        android:layout_below="@+id/t4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <RadioButton
             android:id="@+id/elementryschool"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="초졸"/>
+            android:text="초졸" />
+
         <RadioButton
             android:id="@+id/middleschool"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="중졸"/>
+            android:text="중졸" />
+
         <RadioButton
             android:id="@+id/highschool"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="고졸"/>
+            android:text="고졸" />
+
         <RadioButton
             android:id="@+id/university"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="대졸"/>
+            android:text="대졸" />
     </RadioGroup>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""/>
 
     <!-- 응답자 자식 정보-->
     <TextView
+        android:id="@+id/t5"
+        android:layout_below="@+id/r1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:text=" [ 질문에 성실히 임하고 있나요? ] "/>
+        android:text=" [ 질문에 성실히 임하고 있나요? ] "
+        android:textColor="#000000" />
+
     <CheckBox
+        android:layout_below="@+id/t5"
         android:id="@+id/check"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="네"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""/>
+        android:text="네" />
 
     <!-- 응답자의 앱 평가-->
     <TextView
+        android:id="@+id/t6"
+        android:layout_below="@id/check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:text=" [ 설문지 어플 평가 ]"/>
+        android:text=" [ 설문지 어플 평가 ]"
+        android:textColor="#000000" />
+
     <RatingBar
+        android:layout_below="@+id/t6"
         android:id="@+id/rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numStars="5"
+        android:progressTint="#00FFFF"
         android:rating="1.0"
-        android:stepSize="0.5"
-        android:progressTint="#00FFFF"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""/>
+        android:stepSize="0.5" />
 
     <!-- 제출 -->
     <Button
+        android:layout_below="@id/rating"
         android:id="@+id/response"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="제출"/>
-</LinearLayout>
+        android:text="제출" />
+
+    <!-- 결과 -->
+    <TextView
+        android:layout_below="@id/response"
+        android:id="@+id/show"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text=" "
+        android:textColor="#000000" />
+</RelativeLayout>
